# freertos_training

./: .gitignore  .gitmodules  NOTICE.md  README.md  build_and_test.bat  build_and_test.sh  checkout_submodules.sh  clean.bat  clean.sh  codespaces_build_and_test.sh
.github/workflows/: Demo_CMake_CI.yml  PlantUML_puml2svg.yml  cmake.yml  cmake_ubuntu.yml  cmake_windows.yml  training_CI.yml
Demo_CMake/FreeRTOS_Plus_CLI_with_Trace_Windows_Simulator/: CMakeLists.txt  README.md
build_test/: CMakeLists.txt
build_test/src/: main.c
build_test/test/: CMakeLists.txt
build_test/test/main/: CMakeLists.txt  test_main.cpp
lib/RTOS/: FreeRTOS.cmake  RTOS.cmake
lib/RTOS/FreeRTOS_CMake/: CMakeLists.txt
lib/RTOS/MyTrace/: MyTrace.c  MyTrace.cmake  MyTrace.h
lib/other/: gcd.c  gcd.h  work.c  work.h
training/: README.md
training/01_Task_Creation/: README.md
training/01_Task_Creation/1_xTaskCreateStatic/: CMakeLists.txt  FreeRTOSConfig.h  README.md  main.c  sample_xTaskCreateStatic.c  sample_xTaskCreateStatic.h
training/01_Task_Creation/1_xTaskCreateStatic/test/: CMakeLists.txt
training/01_Task_Creation/2_xTaskCreate/: CMakeLists.txt  README.md  main.c  sample_xTaskCreate.c  sample_xTaskCreate.h
training/01_Task_Creation/2_xTaskCreate/test/: CMakeLists.txt  test_main.cpp
training/02_Task_Control/: README.md
training/02_Task_Control/1_vTaskDelay/: CMakeLists.txt  FreeRTOSConfig.h  MyTrace.c  MyTrace.puml  README.md  main.c  sample_vTaskDelay.c  sample_vTaskDelay.h
training/02_Task_Control/1_vTaskDelay/test/: CMakeLists.txt  test_main.cpp
training/02_Task_Control/2_vTaskDelayUntil/: CMakeLists.txt  FreeRTOSConfig.h  MyTrace.puml  README.md  main.c  sample_vTaskDelayUntil.c  sample_vTaskDelayUntil.h
training/02_Task_Control/2_vTaskDelayUntil/test/: CMakeLists.txt  test_main.cpp
training/02_Task_Control/3_xTaskDelayUntil/: CMakeLists.txt  FreeRTOSConfig.h  MyTrace.puml  README.md  main.c  sample_xTaskDelayUntil.c  sample_xTaskDelayUntil.h
training/02_Task_Control/3_xTaskDelayUntil/test/: CMakeLists.txt  test_main.cpp
training/02_Task_Control/4_vTaskPrioritySet/: CMakeLists.txt  MyTrace.puml  README.md  main.c  sample_vTaskPrioritySet.c  sample_vTaskPrioritySet.h
training/02_Task_Control/4_vTaskPrioritySet/test/: CMakeLists.txt  test_main.cpp
training/02_Task_Control/5_uxTaskPriorityGet/: CMakeLists.txt  MyTrace.puml  README.md  main.c  sample_uxTaskPriorityGet.c  sample_uxTaskPriorityGet.h
training/02_Task_Control/5_uxTaskPriorityGet/test/: CMakeLists.txt  test_main.cpp
training/03_Queue_Management/: README.md
training/03_Queue_Management/1_Queue_Send_And_Receive/: CMakeLists.txt  README.md  main.c  sample_Queue_Send_And_Receive.c  sample_Queue_Send_And_Receive.h
training/03_Queue_Management/1_Queue_Send_And_Receive/test/: CMakeLists.txt  test_main.cpp
training/1_TaskCreateStatic/: CMakeLists.txt  FreeRTOSConfig.h  README.md  TaskCreateStatic.c
training/1_TaskCreateStatic/test/: CMakeLists.txt  test_main.cpp
training/1_Task_Static/: CMakeLists.txt  TaskCreateStatic.c  TaskCreateStatic.h  main.c
training/1_Task_Static/test/: test_main.cpp
training/1_xTaskCreateStatic/: CMakeLists.txt  README.md  main.c  sample_xTaskCreateStatic.c  sample_xTaskCreateStatic.h
training/1_xTaskCreateStatic/test/: CMakeLists.txt  test_main.cpp
training/2_TaskCreate/: CMakeLists.txt  README.md  TaskCreate.c  TaskCreate.h  main.c
training/2_TaskCreate/test/: CMakeLists.txt  test_main.cpp
training/2_xTaskCreate/: CMakeLists.txt  README.md  main.c  sample_xTaskCreate.h
training/2_xTaskCreate/test/: CMakeLists.txt
training/3_vTaskDelayUntil/: CMakeLists.txt  FreeRTOSConfig.h  README.md  main.c
training/3_vTaskDelayUntil/test/: CMakeLists.txt  test_main.cpp
utility/MyTrace2TimingDiagram/: .gitignore  go.mod  main.go
utility/MyTrace2TimingDiagram/cmd/: root.go
utility/MyTrace2VCD/: .gitignore  LICENSE  example.json  go.mod  main.go
utility/MyTrace2VCD/cmd/: root.go
